<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.mercury</groupId>
    <artifactId>mercury</artifactId>
    <version>1.0.1</version>

    <inceptionYear>2015</inceptionYear>
    <url>https://github.com/yellow013/mercury.git</url>
    <developers>
        <developer>
            <name>yellow013</name>
        </developer>
    </developers>

    <name>mercury</name>
    <packaging>pom</packaging>

    <modules>
        <module>actors</module>
        <module>commons</module>
        <module>libraries</module>
        <module>persistence</module>
        <module>serialization</module>
        <module>storage</module>
        <module>transport</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Java 21 -->
        <java.version>21</java.version>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.source>21</maven.compiler.source>
        <!-- Common library version -->
        <slf4j.version>2.0.17</slf4j.version>
        <junit.version>4.13.2</junit.version>
        <jupiter.version>5.12.0</jupiter.version>
        <netty.version>4.1.119.Final</netty.version>
        <jackson.version>2.18.3</jackson.version>
        <guava.version>33.4.0-jre</guava.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <parameters>true</parameters>
                    <enablePreview>true</enablePreview>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- JUnit is a unit testing framework to write and run repeatable automated tests on Java.
            It provides a robust environment to write, organize,
            and execute automated tests, ensuring code reliability and repeatability.
            Its user-friendly annotations and assert methods facilitate the development and running of test cases,
            making it a foundational tool for Java developers focusing on quality assurance and test-driven development. -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Module "junit-jupiter" of JUnit 5. -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Annotations for Error Prone,
            a static analysis tool for Java that catches common programming mistakes at compile-time. -->
        <dependency>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_annotations</artifactId>
            <version>2.36.0</version>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- JUnit 4 - classic -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <!-- JUnit 5 - jupiter -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${jupiter.version}</version>
            </dependency>
            <!-- JSR305 Annotations for Find bugs -->
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>3.0.2</version>
            </dependency>
            <!-- A set of annotations used for code inspection support and code documentation. -->
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>26.0.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>